<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivityForm"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/profileName"
        android:inputType="text"
        android:autofillHints="name"/>


    <EditText
        android:id="@+id/profileAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/profileAge"
        android:inputType="number" />

    <Spinner
        android:id="@+id/profileSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/profileSex"/>


    <CheckBox
        android:id="@+id/profileSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileCheckbox" />

    <Button
        android:id="@+id/profileSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitProfile"
        android:onClick="onClickSubmitProfile"/>

</LinearLayout>